Fixed broken css

--- a/landingpage.css
+++ b/landingpage.css
@@ -13,7 +13,7 @@
     position: fixed;
     top: 0;
     width: 100%;
-    height: 3%%;
+    height: 3%;
     text-align: center;
     display: grid;
     /*The number of repitions below should match the number of items in the navBar*/
